# Personal-and-knowledge

./: .gitignore
AI_devs4/: Changelog.md
AI_devs4/se01e03/: .gitignore
AI_devs4/se01e03/code/: .env.example  AGENTS.md  README.md  SPEC_PACKAGE_SERVICE_PROXY.md  TODO_feature-packageservice_prime.md  pyproject.toml
AI_devs4/se01e03/code/docs/: architecture.md  code-map.md  coding-guidelines.md  requirements-packageservice.md
AI_devs4/se01e03/code/src/: config.py  main.py
AI_devs4/se01e03/code/src/agent/: logic.py
AI_devs4/se01e03/code/src/mcp/: server.py  tools.py
AI_devs4/se01e03/code/src/storage/: session.py
AI_devs4/se01e03/code/tests/: test_agent.py
AI_devs4/se01e04/code/: .gitignore  AGENTS.md  FEE_CALCULATION_MATRIX.md  IMPLEMENTATION_BLUEPRINT.md  M1_ACCEPTANCE_SPEC.md  ROUTE_CALCULATION_LOGIC.md  SPK_ARCHITECTURE_DIAGRAM.md  pyproject.toml
AI_devs4/se01e04/code/agent/: main.py
AI_devs4/se01e04/code/config/: openrouter.yaml
AI_devs4/se01e04/code/core/: business_rules.py  constants.py  models.py
AI_devs4/se01e04/code/docs/: requirements-packagesending.md
AI_devs4/se01e04/code/mcp_server/: server.py
AI_devs4/se01e04/code/mcp_server/tools/: declaration_filler.py  fee_calculator.py  route_finder.py
AI_devs4/se01e05/code/: README.md  pyproject.toml
AI_devs4/se01e05/code/src/: api_client.py  config.yaml  hitl_agent.py  main.py  state_manager.py
AI_devs4/se02e01/code/: categorize.csv  classification_results.json  classify_items.py  pyproject.toml
AI_devs4/se02e02/code/: .env.example  BoardReader.md  PuzzleResolver.md  README.md  pyproject.toml
AI_devs4/se02e02/code/src/: agent.py  board.py  hub.py  vision.py
AI_devs4/se02e03/: .env.example  README.md  pyproject.toml
AI_devs4/se02e03/src/: agent.py  main.py  mcp_server.py  signatures.py
AI_devs4/se02e04/: pyproject.toml
AI_devs4/se02e04/src/: agent.py  main.py  signatures.py  tools.py
AI_devs4/se02e05/: .env.example  pyproject.toml
AI_devs4/se02e05/src/: __init__.py  agents.py  main.py  signatures.py  tools.py
