[project]
name = "package-service-proxy"
version = "0.1.0"
description = "FastAPI proxy server with embedded MCP tools for package operations"
requires-python = ">=3.13.5"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "fastmcp>=0.1.0",
    "langchain-core>=1.2.13,<2.0.0",
    "langchain-openrouter==0.1.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
    "pyright>=1.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.pyright]
pythonVersion = "3.13"
strict = true
